UHF-2929: Fix overflow hidden problem

--- a/src/scss/components/paragraphs/_remote-video.scss
+++ b/src/scss/components/paragraphs/_remote-video.scss
@@ -10,7 +10,6 @@
     height: 0;
     overflow: hidden;
     padding-bottom: 56.5%;
-    position: relative;
 
     iframe {
       border: 0;
